--- a/index.html
+++ b/index.html
@@ -11,6 +11,24 @@
 <h1>Casos de Covid-19 no RS - Mapas Por Dias</h1>
 <h2>Casos de COVID-19 confirmados nos municípios do Rio Grande do Sul. Os dados foram obtidos no site Base dos Dados (<a href="http://basedosdados.org/"> ACESSE AQUI </a>). Os dados foram importados para o RStudio em formato .csv e tratados. As cartas temáticas categorizada e de densidade também foram geradas no RStudio com o uso de left join dos dados com o geom do pacote geobr(), para a plotagem foi usado o pacote ggplot2(). Na medida do possível, os colaboradores tentarão atualizar as cartas diariamente.</h2>
 <div class="container conteudo">
+
+	<h3>CARTAS DO DIA 04/05/2020</h3>
+    <div class="row">
+        <div class="col-lg-6 grafico">
+            <p> Carta Temática Categorizada do Dia 04/05/2020 </p>
+            <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(04041.png)">
+                <img src="04041.png" alt="Carta de Densidade"/>
+            </figure>
+        </div>
+
+        <div class="col-lg-6 grafico">
+            <p> Carta Temática de Densidade do Dia 04/05/2020 </p>
+            <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(04042.png)">
+                <img src="04042.png" alt="Carta de Densidade"/>
+            </figure>
+        </div>
+    </div>
+	
 	<h3>CARTAS DO DIA 05/05/2020</h3>
     <div class="row">
         <div class="col-lg-6 grafico">
@@ -29,7 +47,6 @@
     </div>
 
 	<h3>CARTAS DO DIA 06/05/2020</h3>
-
 	<div class="row">
         <div class="col-lg-6 grafico">
             <p> Carta Temática Categorizada do Dia 06/05/2020 </p>
