--- a/index.html
+++ b/index.html
@@ -12,51 +12,68 @@
 <h2>Casos de COVID-19 confirmados nos municípios do Rio Grande do Sul. Os dados foram obtidos no site Base dos Dados (<a href="http://basedosdados.org/"> ACESSE AQUI </a>). Os dados foram importados para o RStudio em formato .csv e tratados. As cartas temáticas categorizada e de densidade também foram geradas no RStudio com o uso de left join dos dados com o geom do pacote geobr(), para a plotagem foi usado o pacote ggplot2(). Na medida do possível, os colaboradores tentarão atualizar as cartas diariamente.</h2>
 <div class="container conteudo">
 
-	<h3>CARTAS DO DIA 04/05/2020</h3>
+	<h3>CARTAS DO DIA 03/04/2020</h3>
     <div class="row">
         <div class="col-lg-6 grafico">
-            <p> Carta Temática Categorizada do Dia 04/05/2020 </p>
+            <p> Carta Temática Categorizada do Dia 03/04/2020 </p>
+            <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(03041.png)">
+                <img src="03041.png" alt="Carta de Densidade"/>
+            </figure>
+        </div>
+
+        <div class="col-lg-6 grafico">
+            <p> Carta Temática de Densidade do Dia 03/04/2020 </p>
+            <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(03042.png)">
+                <img src="03042.png" alt="Carta de Densidade"/>
+            </figure>
+        </div>
+    </div>
+
+	<h3>CARTAS DO DIA 04/04/2020</h3>
+    <div class="row">
+        <div class="col-lg-6 grafico">
+            <p> Carta Temática Categorizada do Dia 04/04/2020 </p>
             <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(04041.png)">
                 <img src="04041.png" alt="Carta de Densidade"/>
             </figure>
         </div>
 
         <div class="col-lg-6 grafico">
-            <p> Carta Temática de Densidade do Dia 04/05/2020 </p>
+            <p> Carta Temática de Densidade do Dia 04/04/2020 </p>
             <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(04042.png)">
                 <img src="04042.png" alt="Carta de Densidade"/>
             </figure>
         </div>
     </div>
 	
-	<h3>CARTAS DO DIA 05/05/2020</h3>
+	<h3>CARTAS DO DIA 05/04/2020</h3>
     <div class="row">
         <div class="col-lg-6 grafico">
-            <p> Carta Temática Categorizada do Dia 05/05/2020 </p>
+            <p> Carta Temática Categorizada do Dia 05/04/2020 </p>
             <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(05041.png)">
                 <img src="05041.png" alt="Carta de Densidade"/>
             </figure>
         </div>
 
         <div class="col-lg-6 grafico">
-            <p> Carta Temática de Densidade do Dia 05/05/2020 </p>
+            <p> Carta Temática de Densidade do Dia 05/04/2020 </p>
             <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(05042.png)">
                 <img src="05042.png" alt="Carta de Densidade"/>
             </figure>
         </div>
     </div>
 
-	<h3>CARTAS DO DIA 06/05/2020</h3>
+	<h3>CARTAS DO DIA 06/04/2020</h3>
 	<div class="row">
         <div class="col-lg-6 grafico">
-            <p> Carta Temática Categorizada do Dia 06/05/2020 </p>
+            <p> Carta Temática Categorizada do Dia 06/04/2020 </p>
             <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(06041.png)">
                 <img src="06041.png" alt="Carta de Densidade"/>
             </figure>
         </div>
 
         <div class="col-lg-6 grafico">
-            <p> Carta Temática de Densidade do Dia 06/05/2020 </p>
+            <p> Carta Temática de Densidade do Dia 06/04/2020 </p>
             <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(06042.png)">
                 <img src="06042.png" alt="Carta de Densidade"/>
             </figure>
@@ -64,7 +81,7 @@
     </div>
 
     <div class="atualizacoes">
-        <p>Carta Temática e de Densidade do Dia 07/05/2020.</p>
+        <p>Carta Temática e de Densidade do Dia 07/04/2020.</p>
         <p style="color: red">AGUARDANDO DADOS PARA ATUALIZAR!</p>
     </div>
 </div>
