--- a/index.html
+++ b/index.html
@@ -12,6 +12,40 @@
 <h2>Casos de COVID-19 confirmados nos municípios do Rio Grande do Sul. Os dados foram obtidos no site Base dos Dados (<a href="http://basedosdados.org/"> ACESSE AQUI </a>). Os dados foram importados para o RStudio em formato .csv e tratados. As cartas temáticas categorizada e de densidade também foram geradas no RStudio com o uso de left join dos dados com o geom do pacote geobr(), para a plotagem foi usado o pacote ggplot2(). Na medida do possível, os colaboradores tentarão atualizar as cartas diariamente.</h2>
 <div class="container conteudo">
 
+	<h3>CARTAS DO DIA 01/04/2020</h3>
+    <div class="row">
+        <div class="col-lg-6 grafico">
+            <p> Carta Temática Categorizada do Dia 01/04/2020 </p>
+            <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(01041.png)">
+                <img src="01041.png" alt="Carta de Densidade"/>
+            </figure>
+        </div>
+
+        <div class="col-lg-6 grafico">
+            <p> Carta Temática de Densidade do Dia 01/04/2020 </p>
+            <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(01042.png)">
+                <img src="01042.png" alt="Carta de Densidade"/>
+            </figure>
+        </div>
+    </div>
+
+	<h3>CARTAS DO DIA 02/04/2020</h3>
+    <div class="row">
+        <div class="col-lg-6 grafico">
+            <p> Carta Temática Categorizada do Dia 02/04/2020 </p>
+            <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(02041.png)">
+                <img src="02041.png" alt="Carta de Densidade"/>
+            </figure>
+        </div>
+
+        <div class="col-lg-6 grafico">
+            <p> Carta Temática de Densidade do Dia 02/04/2020 </p>
+            <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(02042.png)">
+                <img src="02042.png" alt="Carta de Densidade"/>
+            </figure>
+        </div>
+    </div>
+
 	<h3>CARTAS DO DIA 03/04/2020</h3>
     <div class="row">
         <div class="col-lg-6 grafico">
