--- a/index.html
+++ b/index.html
@@ -13,11 +13,28 @@
 <div class="container conteudo">
 
 	<div class="atualizacoes">
-        <p>Carta Temática e de Densidade do Dia 09/04/2020.</p>
+        <p>Carta Temática e de Densidade do Dia 10/04/2020.</p>
         <p style="color: red">AGUARDANDO DADOS PARA ATUALIZAR!</p>
     </div>
 
-     <h3>CARTAS DO DIA 08/04/2020</h3>
+    <h3>CARTAS DO DIA 09/04/2020</h3>
+	<div class="row">
+        <div class="col-lg-6 grafico">
+            <p> Carta Temática Categorizada do Dia 09/04/2020 </p>
+            <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(09041.png)">
+                <img src="09041.png" alt="Carta de Densidade"/>
+            </figure>
+        </div>
+
+        <div class="col-lg-6 grafico">
+            <p> Carta Temática de Densidade do Dia 09/04/2020 </p>
+            <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(09042.png)">
+                <img src="09042.png" alt="Carta de Densidade"/>
+            </figure>
+        </div>
+    </div>
+
+    <h3>CARTAS DO DIA 08/04/2020</h3>
 	<div class="row">
         <div class="col-lg-6 grafico">
             <p> Carta Temática Categorizada do Dia 08/04/2020 </p>
