--- a/index.html
+++ b/index.html
@@ -13,9 +13,27 @@
 <div class="container conteudo">
 
 	<div class="atualizacoes">
-        <p>Carta Temática e de Densidade do Dia 10/04/2020.</p>
+        <p>Carta Temática e de Densidade do Dia 11/04/2020.</p>
         <p style="color: red">AGUARDANDO DADOS PARA ATUALIZAR!</p>
     </div>
+
+	<h3>CARTAS DO DIA 10/04/2020</h3>
+		<div class="row">
+	        <div class="col-lg-6 grafico">
+	            <p> Carta Temática Categorizada do Dia 10/04/2020 </p>
+	            <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(10041.png)">
+	                <img src="10041.png" alt="Carta de Densidade"/>
+	            </figure>
+	        </div>
+
+	        <div class="col-lg-6 grafico">
+	            <p> Carta Temática de Densidade do Dia 10/04/2020 </p>
+	            <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(10042.png)">
+	                <img src="10042.png" alt="Carta de Densidade"/>
+	            </figure>
+	        </div>
+	    </div>
+
 
     <h3>CARTAS DO DIA 09/04/2020</h3>
 	<div class="row">
