--- a/index.html
+++ b/index.html
@@ -13,11 +13,28 @@
 <div class="container conteudo">
 
 	<div class="atualizacoes">
-        <p>Carta Temática e de Densidade do Dia 13/04/2020.</p>
+        <p style="color: red">Carta Temática Categorizada e de Densidade do Dia 14/04/2020.</p>
         <p style="color: red">AGUARDANDO DADOS PARA ATUALIZAR!</p>
     </div>
 
-    <h3>CARTAS DO DIA 12/04/2020</h3>
+    <h3>CARTAS DO DIA 13/04/2020</h3>
+		<div class="row">
+	        <div class="col-lg-6 grafico">
+	            <p> Carta Temática Categorizada do Dia 13/04/2020 </p>
+	            <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(13041.png)">
+	                <img src="13041.png" alt="Carta de Densidade"/>
+	            </figure>
+	        </div>
+
+	        <div class="col-lg-6 grafico">
+	            <p> Carta Temática de Densidade do Dia 13/04/2020 </p>
+	            <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(13042.png)">
+	                <img src="13042.png" alt="Carta de Densidade"/>
+	            </figure>
+	        </div>
+	    </div>
+
+	<h3>CARTAS DO DIA 12/04/2020</h3>
 		<div class="row">
 	        <div class="col-lg-6 grafico">
 	            <p> Carta Temática Categorizada do Dia 12/04/2020 </p>
