--- a/index.html
+++ b/index.html
@@ -13,9 +13,43 @@
 <div class="container conteudo">
 
 	<div class="atualizacoes">
-        <p style="color: red">Carta Temática Categorizada e de Densidade do Dia 15/04/2020.</p>
+        <p style="color: red">Carta Temática Categorizada e de Densidade do Dia 17/04/2020.</p>
         <p style="color: red">AGUARDANDO DADOS PARA ATUALIZAR!</p>
     </div>
+
+    <h3>CARTAS DO DIA 16/04/2020</h3>
+		<div class="row">
+	        <div class="col-lg-6 grafico">
+	            <p> Carta Temática Categorizada do Dia 16/04/2020 </p>
+	            <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(16041.png)">
+	                <img src="16041.png" alt="Carta de Densidade"/>
+	            </figure>
+	        </div>
+
+	        <div class="col-lg-6 grafico">
+	            <p> Carta Temática de Densidade do Dia 16/04/2020 </p>
+	            <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(16042.png)">
+	                <img src="16042.png" alt="Carta de Densidade"/>
+	            </figure>
+	        </div>
+	    </div>
+
+    <h3>CARTAS DO DIA 15/04/2020</h3>
+		<div class="row">
+	        <div class="col-lg-6 grafico">
+	            <p> Carta Temática Categorizada do Dia 15/04/2020 </p>
+	            <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(15041.png)">
+	                <img src="15041.png" alt="Carta de Densidade"/>
+	            </figure>
+	        </div>
+
+	        <div class="col-lg-6 grafico">
+	            <p> Carta Temática de Densidade do Dia 15/04/2020 </p>
+	            <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(15042.png)">
+	                <img src="15042.png" alt="Carta de Densidade"/>
+	            </figure>
+	        </div>
+	    </div>
 
     <h3>CARTAS DO DIA 14/04/2020</h3>
 		<div class="row">
