--- a/index.html
+++ b/index.html
@@ -13,9 +13,61 @@
 <div class="container conteudo">
 
 	<div class="atualizacoes">
-        <p style="color: red">Carta Temática Categorizada e de Densidade do Dia 17/04/2020.</p>
+        <p style="color: red">Carta Temática Categorizada e de Densidade do Dia 20/04/2020.</p>
         <p style="color: red">AGUARDANDO DADOS PARA ATUALIZAR!</p>
     </div>
+
+
+    <h3>CARTAS DO DIA 19/04/2020</h3>
+		<div class="row">
+	        <div class="col-lg-6 grafico">
+	            <p> Carta Temática Categorizada do Dia 19/04/2020 </p>
+	            <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(19041.png)">
+	                <img src="19041.png" alt="Carta de Densidade"/>
+	            </figure>
+	        </div>
+
+	        <div class="col-lg-6 grafico">
+	            <p> Carta Temática de Densidade do Dia 19/04/2020 </p>
+	            <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(19042.png)">
+	                <img src="19042.png" alt="Carta de Densidade"/>
+	            </figure>
+	        </div>
+	    </div>
+
+    <h3>CARTAS DO DIA 18/04/2020</h3>
+		<div class="row">
+	        <div class="col-lg-6 grafico">
+	            <p> Carta Temática Categorizada do Dia 18/04/2020 </p>
+	            <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(18041.png)">
+	                <img src="18041.png" alt="Carta de Densidade"/>
+	            </figure>
+	        </div>
+
+	        <div class="col-lg-6 grafico">
+	            <p> Carta Temática de Densidade do Dia 18/04/2020 </p>
+	            <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(18042.png)">
+	                <img src="18042.png" alt="Carta de Densidade"/>
+	            </figure>
+	        </div>
+	    </div>
+
+    <h3>CARTAS DO DIA 17/04/2020</h3>
+		<div class="row">
+	        <div class="col-lg-6 grafico">
+	            <p> Carta Temática Categorizada do Dia 17/04/2020 </p>
+	            <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(17041.png)">
+	                <img src="17041.png" alt="Carta de Densidade"/>
+	            </figure>
+	        </div>
+
+	        <div class="col-lg-6 grafico">
+	            <p> Carta Temática de Densidade do Dia 17/04/2020 </p>
+	            <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(17042.png)">
+	                <img src="17042.png" alt="Carta de Densidade"/>
+	            </figure>
+	        </div>
+	    </div>
 
     <h3>CARTAS DO DIA 16/04/2020</h3>
 		<div class="row">
