--- a/index.html
+++ b/index.html
@@ -13,9 +13,80 @@
 <div class="container conteudo">
 
 	<div class="atualizacoes">
-        <p style="color: red">Carta Temática Categorizada e de Densidade do Dia 20/04/2020.</p>
+        <p style="color: red">Carta Temática Categorizada e de Densidade do Dia 24/04/2020.</p>
         <p style="color: red">AGUARDANDO DADOS PARA ATUALIZAR!</p>
     </div>
+
+    <h3>CARTAS DO DIA 23/04/2020</h3>
+		<div class="row">
+	        <div class="col-lg-6 grafico">
+	            <p> Carta Temática Categorizada do Dia 23/04/2020 </p>
+	            <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(23041.png)">
+	                <img src="23041.png" alt="Carta de Densidade"/>
+	            </figure>
+	        </div>
+
+	        <div class="col-lg-6 grafico">
+	            <p> Carta Temática de Densidade do Dia 23/04/2020 </p>
+	            <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(23042.png)">
+	                <img src="23042.png" alt="Carta de Densidade"/>
+	            </figure>
+	        </div>
+	    </div>
+
+
+    <h3>CARTAS DO DIA 22/04/2020</h3>
+		<div class="row">
+	        <div class="col-lg-6 grafico">
+	            <p> Carta Temática Categorizada do Dia 22/04/2020 </p>
+	            <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(22041.png)">
+	                <img src="22041.png" alt="Carta de Densidade"/>
+	            </figure>
+	        </div>
+
+	        <div class="col-lg-6 grafico">
+	            <p> Carta Temática de Densidade do Dia 22/04/2020 </p>
+	            <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(22042.png)">
+	                <img src="22042.png" alt="Carta de Densidade"/>
+	            </figure>
+	        </div>
+	    </div>
+
+
+    <h3>CARTAS DO DIA 21/04/2020</h3>
+		<div class="row">
+	        <div class="col-lg-6 grafico">
+	            <p> Carta Temática Categorizada do Dia 21/04/2020 </p>
+	            <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(21041.png)">
+	                <img src="21041.png" alt="Carta de Densidade"/>
+	            </figure>
+	        </div>
+
+	        <div class="col-lg-6 grafico">
+	            <p> Carta Temática de Densidade do Dia 21/04/2020 </p>
+	            <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(21042.png)">
+	                <img src="21042.png" alt="Carta de Densidade"/>
+	            </figure>
+	        </div>
+	    </div>
+
+
+    <h3>CARTAS DO DIA 20/04/2020</h3>
+		<div class="row">
+	        <div class="col-lg-6 grafico">
+	            <p> Carta Temática Categorizada do Dia 20/04/2020 </p>
+	            <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(20041.png)">
+	                <img src="20041.png" alt="Carta de Densidade"/>
+	            </figure>
+	        </div>
+
+	        <div class="col-lg-6 grafico">
+	            <p> Carta Temática de Densidade do Dia 20/04/2020 </p>
+	            <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(20042.png)">
+	                <img src="20042.png" alt="Carta de Densidade"/>
+	            </figure>
+	        </div>
+	    </div>
 
 
     <h3>CARTAS DO DIA 19/04/2020</h3>
