--- a/index.html
+++ b/index.html
@@ -13,9 +13,60 @@
 <div class="container conteudo">
 
 	<div class="atualizacoes">
-        <p style="color: red">Carta Temática Categorizada e de Densidade do Dia 24/04/2020.</p>
+        <p style="color: red">Carta Temática Categorizada e de Densidade do Dia 27/04/2020.</p>
         <p style="color: red">AGUARDANDO DADOS PARA ATUALIZAR!</p>
     </div>
+
+    <h3>CARTAS DO DIA 26/04/2020</h3>
+		<div class="row">
+	        <div class="col-lg-6 grafico">
+	            <p> Carta Temática Categorizada do Dia 26/04/2020 </p>
+	            <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(26041.png)">
+	                <img src="26041.png" alt="Carta de Densidade"/>
+	            </figure>
+	        </div>
+
+	        <div class="col-lg-6 grafico">
+	            <p> Carta Temática de Densidade do Dia 26/04/2020 </p>
+	            <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(26042.png)">
+	                <img src="26042.png" alt="Carta de Densidade"/>
+	            </figure>
+	        </div>
+	    </div>
+
+    <h3>CARTAS DO DIA 25/04/2020</h3>
+		<div class="row">
+	        <div class="col-lg-6 grafico">
+	            <p> Carta Temática Categorizada do Dia 25/04/2020 </p>
+	            <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(25041.png)">
+	                <img src="25041.png" alt="Carta de Densidade"/>
+	            </figure>
+	        </div>
+
+	        <div class="col-lg-6 grafico">
+	            <p> Carta Temática de Densidade do Dia 25/04/2020 </p>
+	            <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(25042.png)">
+	                <img src="25042.png" alt="Carta de Densidade"/>
+	            </figure>
+	        </div>
+	    </div>
+
+    <h3>CARTAS DO DIA 24/04/2020</h3>
+		<div class="row">
+	        <div class="col-lg-6 grafico">
+	            <p> Carta Temática Categorizada do Dia 24/04/2020 </p>
+	            <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(24041.png)">
+	                <img src="24041.png" alt="Carta de Densidade"/>
+	            </figure>
+	        </div>
+
+	        <div class="col-lg-6 grafico">
+	            <p> Carta Temática de Densidade do Dia 24/04/2020 </p>
+	            <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(24042.png)">
+	                <img src="24042.png" alt="Carta de Densidade"/>
+	            </figure>
+	        </div>
+	    </div>
 
     <h3>CARTAS DO DIA 23/04/2020</h3>
 		<div class="row">
@@ -33,7 +84,6 @@
 	            </figure>
 	        </div>
 	    </div>
-
 
     <h3>CARTAS DO DIA 22/04/2020</h3>
 		<div class="row">
