--- a/index.html
+++ b/index.html
@@ -13,9 +13,43 @@
 <div class="container conteudo">
 
 	<div class="atualizacoes">
-        <p style="color: red">Carta Temática Categorizada e de Densidade do Dia 27/04/2020.</p>
+        <p style="color: red">Carta Temática Categorizada e de Densidade do Dia 29/04/2020.</p>
         <p style="color: red">AGUARDANDO DADOS PARA ATUALIZAR!</p>
     </div>
+
+    <h3>CARTAS DO DIA 28/04/2020</h3>
+		<div class="row">
+	        <div class="col-lg-6 grafico">
+	            <p> Carta Temática Categorizada do Dia 28/04/2020 </p>
+	            <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(28041.png)">
+	                <img src="28041.png" alt="Carta de Densidade"/>
+	            </figure>
+	        </div>
+
+	        <div class="col-lg-6 grafico">
+	            <p> Carta Temática de Densidade do Dia 28/04/2020 </p>
+	            <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(28042.png)">
+	                <img src="28042.png" alt="Carta de Densidade"/>
+	            </figure>
+	        </div>
+	    </div>
+
+     <h3>CARTAS DO DIA 27/04/2020</h3>
+		<div class="row">
+	        <div class="col-lg-6 grafico">
+	            <p> Carta Temática Categorizada do Dia 27/04/2020 </p>
+	            <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(27041.png)">
+	                <img src="27041.png" alt="Carta de Densidade"/>
+	            </figure>
+	        </div>
+
+	        <div class="col-lg-6 grafico">
+	            <p> Carta Temática de Densidade do Dia 27/04/2020 </p>
+	            <figure class="zoom" onmousemove="zoom(event)" style="background-image: url(27042.png)">
+	                <img src="27042.png" alt="Carta de Densidade"/>
+	            </figure>
+	        </div>
+	    </div>
 
     <h3>CARTAS DO DIA 26/04/2020</h3>
 		<div class="row">
