--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
         <p style="color: red">Carta Temática Categorizada e de Densidade do Dia 29/04/2020.</p>
         <p style="color: red">AGUARDANDO DADOS PARA ATUALIZAR!</p>
     </div>
+	
+	<h3>CARTAS DO DIA 28/04/2020</h3>
+		<div class="row">
+	        <div class="col-lg-6 grafico">
+	            <p> Carta Temática Categorizada do Dia 28/04/2020 </p>
+	            <iframe src="https://github.com/Prof-Rodrigo-Silva/casoscovid19rs/mapas_bairros" width="680" height="480" allowfullscreen></iframe>
+	        </div>
 
     <h3>CARTAS DO DIA 28/04/2020</h3>
 		<div class="row">
