--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<div class="row">
 	        <div class="col-lg-6 grafico">
 	            <p> Carta Temática Categorizada do Dia 28/04/2020 </p>
-	            <iframe src="https://github.com/Prof-Rodrigo-Silva/casoscovid19rs/mapas_bairros.html" width="680" height="480" allowfullscreen></iframe>
+	            <iframe src="https://github.com/Prof-Rodrigo-Silva/casoscovid19rs/mapas_bairros" width="680" height="480"></iframe>
 	        </div>
 
     <h3>CARTAS DO DIA 28/04/2020</h3>
